<resources>
    <string name="app_name">Signup</string>
    <string name="user_sign_in_page">User Sign in Page</string>
    <string name="welcome">Signin!</string>
    <string name="email">Email</string>
    <string name="password_signin">Password</string>
    <string name="login_signin">Signup</string>
    <string name="user_nsignup_button">User Signup</string>
    <string name="forgot_npassword">Forgot Password</string>
    <string name="owner_nsignup">Owner Signup</string>
    <string name="sign_in_page_main">Sign in Page</string>
    <string name="background_signin">background</string>
    <string name="user_nsignup">User Signup</string>
    <string name="nameSignup">Full Name</string>
    <string name="emailsignup">Email</string>
    <string name="passwordsignup">Password</string>
    <string name="user_sign_up_page">User Sign up Page</string>
    <string name="login_mainButton">Login</string>
    <string name="signup_page_text">Signup Page !</string>
    <string name="ownerpage_name">Name</string>
    <string name="owner_signup_text1">Owner Signup !</string>
    <string name="owner_email2">Email</string>
    <string name="owner_password">Password</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Search</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="owner_signup_text">Owner Signup !</string>
    <string name="owner_email">Email</string>
    <string name="owner_password3">Password</string>
    <string name="dash_cart_header">Cart</string>
    <string name="dashnotification">Notification</string>
    <string name="dashsearch">Search</string>
    <string name="title_activity_dashboard_navigation">Dashboard_navigation</string>
    <string name="menu_home1">Home</string>
    <string name="menu_categories">Gallery</string>
    <string name="menu_brand">Slideshow</string>
    <string name="menu_order">Slideshow</string>
    <string name="menu_account">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>